# FHE16-CNN

./: .gitignore  CMakeLists.txt  README.md  accuracy_log.txt  export_mnist_samples.py  hybrid_inference.cpp  main.cpp  test.cpp  train_mnist_fhe_cnn.py
FHE_TEST/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
FHE_TEST/include_FHE16/FHE16/include/soAPI/: .soAPI.hpp.swp  soAPI.hpp
export_csv/: conv_b.csv  conv_w.csv  fc_b.csv  fc_w.csv
